--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -225,7 +225,7 @@ train_D2: #
   combine_uc_and_cd: true
   include_same_patient_samples: false
   config:
-    Cohort: ['USA_hmbp', 'Germany_elinav', 'Israel_elinav']
+    Cohort: ['USA_hmbp', 'China_jia', 'Israel_elinav']
 
 validate_D2: #
   include_intervention: false
@@ -237,6 +237,94 @@ validate_D2: #
   include_same_patient_samples: false
   config:
     Cohort: ['Germany_elinav']
+
+train_E1: #
+  include_intervention: false
+  include_remission: false
+  include_antibiotics: false
+  include_surgery: false
+  include_children: false
+  combine_uc_and_cd: true
+  include_same_patient_samples: false
+  config:
+    Cohort: ['Ireland_hill', 'China_jia', 'Germany_elinav']
+
+validate_E1: #
+  include_intervention: false
+  include_remission: false
+  include_antibiotics: false
+  include_surgery: false
+  include_children: false
+  combine_uc_and_cd: true
+  include_same_patient_samples: false
+  config:
+    Cohort: ['Israel_elinav']
+
+train_E2: #
+  include_intervention: false
+  include_remission: false
+  include_antibiotics: false
+  include_surgery: false
+  include_children: false
+  combine_uc_and_cd: true
+  include_same_patient_samples: false
+  config:
+    Cohort: ['Ireland_hill', 'Israel_elinav', 'Germany_elinav']
+
+validate_E2: #
+  include_intervention: false
+  include_remission: false
+  include_antibiotics: false
+  include_surgery: false
+  include_children: false
+  combine_uc_and_cd: true
+  include_same_patient_samples: false
+  config:
+    Cohort: ['China_jia']
+
+train_F1: #
+  include_intervention: false
+  include_remission: false
+  include_antibiotics: false
+  include_surgery: false
+  include_children: false
+  combine_uc_and_cd: true
+  include_same_patient_samples: false
+  config:
+    Cohort: ['Ireland_hill', 'China_jia', 'Germany_elinav']
+
+validate_F1: #
+  include_intervention: false
+  include_remission: false
+  include_antibiotics: false
+  include_surgery: false
+  include_children: false
+  combine_uc_and_cd: true
+  include_same_patient_samples: false
+  config:
+    Cohort: ['USA_hmbp']
+
+train_F2: #
+  include_intervention: false
+  include_remission: false
+  include_antibiotics: false
+  include_surgery: false
+  include_children: false
+  combine_uc_and_cd: true
+  include_same_patient_samples: false
+  config:
+    Cohort: ['Ireland_hill', 'Israel_elinav', 'Germany_elinav']
+
+validate_F2: #
+  include_intervention: false
+  include_remission: false
+  include_antibiotics: false
+  include_surgery: false
+  include_children: false
+  combine_uc_and_cd: true
+  include_same_patient_samples: false
+  config:
+    Cohort: ['USA_prism']
 
 evaluate_israel:
   include_intervention: false
