--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,35 +1,48 @@
-sql_queries:
-  # All filtered runs
-  all_filtered_runs: |
-    SELECT DISTINCT r.run
-    FROM cleaned_runs r
-    JOIN cleaned_patients p ON r.patient_id = p.patient_id
-    WHERE r.intervention = 0
-      AND r.remission = 0
-      AND r.antibiotics = 0
-      AND r.surgery = 0
-      AND p.age >= 18
-      AND r.run IN (
-        SELECT r2.run
-        FROM cleaned_runs r2
-        JOIN cleaned_patients p2 ON r2.patient_id = p2.patient_id
-        WHERE r2.patient_id = r.patient_id
-        ORDER BY p2.modified ASC, r2.modified ASC
-        LIMIT 1
-      )
+seed: 88
+n_splits: 5
+n_extract_features: 10
+pipe_config_path: 'configs/pipe_configs.yaml'
+db_name: 'ibd_microbiome.sqlite3'
 
+# Returns non-duplicate, filtered patients and cohort table. Later filtering is done in memory
+filtered_runs: |
+  SELECT DISTINCT r.run, p.cohort
+  FROM cleaned_runs r
+  JOIN cleaned_patients p ON r.patient_id = p.patient_id
+  WHERE r.intervention = 0
+    AND r.remission = 0
+    AND r.antibiotics = 0
+    AND r.surgery = 0
+    AND p.age >= 18
+    AND r.run IN (
+      SELECT r2.run
+      FROM cleaned_runs r2
+      JOIN cleaned_patients p2 ON r2.patient_id = p2.patient_id
+      WHERE r2.patient_id = r.patient_id
+      ORDER BY p2.modified ASC, r2.modified ASC, r2.run
+      LIMIT 1
+    )
+
+split_cohorts:
   train_U1: ['USA_hmbp', 'USA_qiita', 'USA_umass']
   validate_U1: ['USA_prism']
+
   train_U2: ['USA_prism', 'USA_qiita', 'USA_umass']
   validate_U2: ['USA_hmbp']
+
   train_A1: ['USA_hmbp', 'China_jia', 'Germany_elinav']
   validate_A1: ['Ireland_hill']
+
   train_A2: ['USA_hmbp', 'Ireland_hill', 'Germany_elinav']
   validate_A2: ['China_jia']
+  
   train_B1: ['USA_hmbp', 'China_jia', 'Israel_elinav']
   validate_B1: ['Ireland_hill']
+
   train_B2: ['Ireland_hill', 'USA_hmbp', 'Israel_elinav']
   validate_B2: ['China_jia']
+
+  train_C1: ['USA_hmbp', 'Germany_elinav', 'Ireland_hill'] 
   validate_C1: ['Israel_elinav']
 
   train_C2: ['Ireland_hill', 'USA_hmbp', 'Israel_elinav']
