--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -3,6 +3,7 @@ n_splits: 5
 n_extract_features: 10
 pipe_config_path: 'configs/pipe_configs.yaml'
 db_name: 'ibd_microbiome.sqlite3'
+log_name: "status.log"
 
 split_cohorts:
   train_U1: ['USA_hmbp', 'USA_qiita', 'USA_umass']
